<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/UFTSLoginText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achtung"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw1" />

    <EditText
        android:id="@+id/usrTB"
        android:layout_width="254dp"
        android:layout_height="57dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/UFTSusrname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw2" />

    <EditText
        android:id="@+id/pwdTB"
        android:layout_width="254dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/UFTSpwd"
        android:inputType="text|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usrTB" />

    <Button
        android:id="@+id/connect"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="41dp"
        android:text="@string/UFTScon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwdTB" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <EditText
        android:id="@+id/ipTB"
        android:layout_width="254dp"
        android:layout_height="57dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/UFTSIP"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/usrTB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>